[gd_scene load_steps=2 format=3 uid="uid://67ckwptfi0j1"]

[ext_resource type="Script" path="res://interaction/jump_area/interaction_jump_area.gd" id="1_ljbpw"]

[node name="InteractionJumpArea" type="Area2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_ljbpw")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
